# synth

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  synth_performance_benchmark.py
.cursor/rules/: run-with-uv.mdc
.github/workflows/: tests.yml
docs/: keyboard_to_midi_plan.md  midi_controller_input_plan.md
qwerty_synth/: __init__.py  adsr.py  arpeggiator.py  chorus.py  config.py  controller.py  delay.py  drive.py  entry.py  event_scheduler.py  filter.py  gui.py  gui_qt.py  input.py  keyboard_midi.py  lfo.py  midi_input.py  patch.py  play_midi.py  plot.py  record.py  reverb.py  step_sequencer.py  synth.py  test_controller.py
tests/: conftest.py  test_adsr.py  test_arpeggiator.py  test_chorus.py  test_controller.py  test_delay.py  test_drive.py  test_filter.py  test_input.py  test_keyboard_integration.py  test_keyboard_midi.py  test_lfo.py  test_midi_input.py  test_midi_integration.py  test_patch.py  test_record.py  test_reverb.py  test_step_sequencer.py  test_synth.py
