[project]
name = "synth1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "mido>=1.3.3",
    "numpy>=2.2.4",
    "pynput>=1.8.1",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "qdarkstyle>=3.2.3",
    "ruff>=0.11.4",
    "scipy>=1.15.3",
    "sounddevice>=0.5.1",
]
