[project]
name = "qwerty-synth"
version = "0.1.0"
description = "A minimalist real-time synthesizer with QWERTY keyboard input"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "mido>=1.3.3",
    "numba>=0.61.2",
    "numpy>=2.2.4",
    "pynput>=1.8.1",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "python-rtmidi>=1.5.8",
    "pyyaml>=6.0.2",
    "qdarkstyle>=3.2.3",
    "scipy>=1.15.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=qwerty_synth",
    "--cov-report=term-missing",
]
